--- a/src/components/Homepage/homepage.css
+++ b/src/components/Homepage/homepage.css
@@ -4,6 +4,7 @@ body {
   width: 99%;
   background-color: black;
   font-family: 'Yatra One', cursive;
+  overflow-x: hidden;
 
 }
 
@@ -83,7 +84,7 @@ body {
   font-weight: 900;
   font-size: 2.2rem;
   background: #16a9c7;
-  background-color: rgb(22, 169, 199);
+  background-color: #16a9c7;
   border: none;
   border-radius: 7px;
   box-shadow: 9px 7px 32px -11px rgb(22, 169, 199);
@@ -129,8 +130,8 @@ body {
   border-radius: 7px;
   width: calc(450px + 12px);
   height: calc(80px + 12px);
-  border: 6px solid #72f29a;
-  box-shadow: 0 0 60px #14e956a3;
+  border: 6px solid #16a9c7;
+  box-shadow: 0 0 60px #16a9c7;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -184,7 +185,7 @@ body {
   width: 30px;
   height: 30px;
   border-radius: 7px;
-  border: 6px solid #14e956;
+  border: 6px solid #16a9c7;
   position: absolute;
   z-index: -1;
   top: 50%;
@@ -293,7 +294,6 @@ body {
 /* PROJECTS */
 .projects {
   min-height: 100%;
-  /* background-image: url('../../Images/endless-constellation.svg'); */
   background-color: hsla(0, 0%, 50%, 0.24);
   font-family: 'Yatra One', cursive;
   padding: 2rem;
@@ -379,9 +379,11 @@ body {
 }
 
 .contact-body {
-  /* background-color: rgba(255, 255, 255, 1); */
   background-color: rgb(0, 0, 0, 0.7);
   text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .contacts {
@@ -632,7 +634,7 @@ body {
     font-size: 18px;
   }
   .github,.mail,.twitter,.linkedin{
-    width: 80%;
+    width: 90%;
   }
 }
 
@@ -646,23 +648,68 @@ body {
     background-color: rgb(112, 95, 112);
     width: 95%;
   }
-
- 
-
   .bio {
     padding: 1rem 0.2rem;
     width: 90%;
   }
-
+  .contacts {
+    display: grid;
+    grid-template-columns: 1fr ;
+    gap: 6%;
+    margin: 10px 10%;
+  }
+  .github,.mail,.twitter,.linkedin{
+    width: 80%;
+  }
+  .contact-body{
+    height: 600px;
+  }
+  .project{
+    width: 95%;
+  }
+  .list{
+    left: 20%;
+  }
 }
 
-@media (max-width: 420px) {
+@media (max-width: 480px) {
+  body{
+    overflow-x: hidden;
+  }
   .shake-emoji {
     font-size: 16px;
   }
 
   .midbio p {
     font-size: 16px;
+  }
+  .list{
+    left: 16%;
+  }
+  .lastbtn button{
+  border-radius: 10px;
+  padding: .5rem;
+ 
+  }
+  .contacts{
+    margin-left: 18%;
+  }
+  .projects{
+    width: 89%;
+    overflow-x: hidden;
+  }
+.project{
+  width: 300px;
+
+}
+.footer{
+  height: max-content;
+  font-size: 14px;
+}
+}
+@media (max-width: 390px) {
+  .list{
+    left: 12%;
   }
 }
 
