--- a/src/components/Homepage/homepage.css
+++ b/src/components/Homepage/homepage.css
@@ -1,7 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Yatra+One&display=swap');
 
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 body {
-  width: 99%;
+  width: 100%;
   background-color: black;
   font-family: 'Yatra One', cursive;
   overflow-x: hidden;
@@ -10,11 +15,12 @@ body {
 
 /* HOME SECTION */
 .home {
-  height: 900px;
-  width: 95.3vw;
+  min-height: 100vh;
+  height: max-content;
+  width: 100%;
   background-image: url('../../Images/endless-constellation.svg');
   font-family: 'Yatra One', cursive;
-  padding: 2rem;
+  padding: 0 2rem;
   color: white;
   display: flex;
   justify-content: space-evenly;
@@ -23,7 +29,8 @@ body {
 
 .bio {
   width: 65%;
-  padding: 4rem;
+  padding: 4rem 8rem;
+  padding-top: 0rem;
 }
 
 .midbio {
@@ -46,8 +53,9 @@ body {
   width: 60%;
   font-size: 25px;
   border-radius: 10px;
-  margin-top: 15rem;
+  margin-top: 0rem;
 }
+
 
 .imagehome img {
   width: 80%;
@@ -55,19 +63,17 @@ body {
 }
 
 /* TECHNOLOGIES */
-.technologies {
+.tech-body {
   background-color: rgba(255, 255, 255, 0.1);
-  background-image: url('../../Images/react-js-icon.svg');
+  background-image: url('../../Images/react.png');
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   background-position: center;
-  filter: blur(29px);
-  width: 98%;
-  min-height: 100%;
-  height: 100vh;
+  width: 100%;
+  /* min-height: 100%; */
+  height: max-content;
   position: relative;
-  /* opacity: 8; */
-
+  padding-bottom: 5rem;
 }
 
 .button-wrap {
@@ -224,9 +230,6 @@ body {
 }
 
 .list {
-  position: absolute;
-  top: 110%;
-  left: 30%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -237,17 +240,17 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 1%;
-  margin: 5% 20%;
+  /* margin: 5% 20%; */
   background-color: rgb(0, 0, 0, 0.7);
-  width: 40rem;
+  width: 60%;
   border-radius: 20px;
   padding-top: 2rem;
 
 }
 
 .tool {
-  width: 18rem;
-  height: 18rem;
+  width: 100%;
+  height: 100%;
   text-align: center;
 }
 
@@ -266,7 +269,7 @@ body {
 .bio {
   color: wheat;
   height: 65rem;
-  min-height: 100%;
+  /* min-height: 100%; */
   height: max-content;
   text-align: center;
   margin: 0 auto;
@@ -285,6 +288,7 @@ body {
   color: rgb(22, 169, 199);;
   animation: enter 2s ease forwards;
   font-size: 24px;
+  height: 4rem;
 }
 
 .bio h5 {
@@ -296,13 +300,13 @@ body {
   min-height: 100%;
   background-color: hsla(0, 0%, 50%, 0.24);
   font-family: 'Yatra One', cursive;
-  padding: 2rem;
   color: white;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   text-align: center;
-  margin: 3rem 0;
+margin: 0 auto;
+margin-top: 3rem;
 }
 
 .protitle {
@@ -312,10 +316,11 @@ body {
   padding: 0 25px;
   background-color: rgba(0, 0, 0, 0.9);
   margin-bottom: 2rem;
+  height: 5rem;
 }
 
 .protitle h3 {
-  height: 2rem;
+  height: 3rem;
   padding: .5rem 20px;
   border-radius: 10px;
   border: 2px solid rgb(22, 169, 199);;
@@ -358,12 +363,16 @@ body {
 .project img {
   width: 100%;
 }
+.project h3{
+  margin: 1rem 0;
+}
 .lastbtn{
   display: flex;
   justify-content: space-around;
   align-items: center;
   width: 100%;
  padding-bottom: 1rem;
+ margin: 1rem 0;
 }
 .lastbtn button{
   border-radius: 10px;
@@ -413,7 +422,10 @@ body {
   cursor: pointer;
   transition: transform 0.3s ease;
 }
+.contacts a{
+  text-decoration: none;
 
+}
  .mail{
   width: 100%;
   height: 4rem;
@@ -428,14 +440,14 @@ body {
   cursor: pointer;
   transition: transform 0.3s ease;
 }
- .linkedin a, .twitter a{
-  width: 20%;
+.linkedin img, .twitter img{
+  width: 15%;
 }
-.mail a img{
+.mail img{
   width: 60px
 }
 
-.twitter{
+.twitter, .phone, .whatsapp{
   width: 100%;
   height: 4rem;
   border-radius: 10px;
@@ -449,7 +461,14 @@ body {
   cursor: pointer;
   transition: transform 0.3s ease;
 }
-.twitter:hover, .mail:hover, .github:hover, .linkedin:hover {
+.phone{
+  background-color: grey;
+}
+.whatsapp{
+  background-color: #25d366;
+}
+
+.twitter:hover, .mail:hover, .github:hover, .linkedin:hover, .phone:hover {
   transform: scale(1.1); 
 }
 .linkedin{
@@ -526,22 +545,26 @@ body {
 }
 
 /* MEDIA QUERIES */
-@media (max-width: 1400px) {
+@media (max-width: 1450px) {
   .midbio h3 {
     font-size: 34px;
     line-height: 45px;
     margin-top: 2rem;
   }
+  .imagehome{
+    display: flex;
+    justify-content: end;
+    align-items: end;
+    height: 100%;
+  }
 
   .imagehome img {
-    width: 60%;
-    height: 60%;
     margin-left: 2rem;
+    margin-top: 3rem;
   }
 
   .shake-emoji {
     animation: shake 2s ease-in-out infinite;
-    background-color: red;
     padding: 2px 5px;
     width: 80%;
     font-size: 20px;
@@ -552,19 +575,17 @@ body {
     width: 80%
   }
 
-  .home {
-    width: 93.3vw;
-  }
+  
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1290px) {
   .shake-emoji {
     animation: shake 2s ease-in-out infinite;
-    background-color: yellow;
     padding: 2px 5px;
     width: 80%;
     font-size: 20px;
     border-radius: 10px;
+    margin-top: 5rem;
   }
 
   .midbio h3 {
@@ -573,11 +594,9 @@ body {
   }
 
   .home {
-    width: 92vw;
+    width: 100%;
   }
-  .list {
-    left: 20%;
-  }
+ 
 }
 
 @media (max-width: 1000px) {
@@ -585,14 +604,11 @@ body {
     font-size: 20px;
     line-height: 36px;
   }
-  .shake-emoji{
-    background-color: white;
-  }
+
   .home {
     flex-direction: column;
     justify-content: center;
-    padding-top: 8rem;
-    width: 94.2%;
+    padding-top: 4rem;
   }
 
   .bio {
@@ -601,55 +617,40 @@ body {
   }
 
   .imagehome img {
-
-    margin: 0 20%;
-    margin-top: -70%;
+    margin-top: 5%;
     margin-bottom: 3rem;
+    margin-right: 2rem;
   }
 
   .shake-emoji {
     margin-top: 4rem;
   }
-  .list{
-    top: 140%;
-    left: 30%;
-  }
-  .tools {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 1%;
-    margin: 0;
-    background-color: rgb(0, 0, 0, 0.7);
-    width: 100%;
-    border-radius: 20px;
-    padding-top: 2rem;
   
-  }
+  
   .tool {
-    width: 10rem;
-    height: 10rem;
+   
     text-align: center;
   }
   .bio h5 {
     font-size: 18px;
   }
-  .github,.mail,.twitter,.linkedin{
+  .github,.mail,.twitter,.linkedin, .phone, .whatsapp{
     width: 90%;
   }
 }
 
-@media (max-width: 700px) {
+@media (max-width: 770px) {
   .home {
-    width: 91.3%;
-    height: 1000px;
+    width: 100%;
+    height: max-content;
   }
 
   .shake-emoji {
-    background-color: rgb(112, 95, 112);
     width: 95%;
+    margin-top: 3rem;
   }
   .bio {
-    padding: 1rem 0.2rem;
+    padding: 0rem 0.2rem;
     width: 90%;
   }
   .contacts {
@@ -658,8 +659,11 @@ body {
     gap: 6%;
     margin: 10px 10%;
   }
-  .github,.mail,.twitter,.linkedin{
+  .github,.mail,.twitter,.linkedin, .whatsapp{
     width: 80%;
+  }
+  .linkedin img, .twitter img{
+    width: 10%;
   }
   .contact-body{
     height: 600px;
@@ -667,25 +671,25 @@ body {
   .project{
     width: 95%;
   }
-  .list{
-    left: 20%;
-  }
+  
 }
 
 @media (max-width: 480px) {
-  body{
-    overflow-x: hidden;
+  .home{
+    height: max-content;
   }
   .shake-emoji {
     font-size: 16px;
   }
 
   .midbio p {
-    font-size: 16px;
+    font-size: 14px;
   }
-  .list{
-    left: 16%;
+  .midbio h3{
+    font-size: 20px;
+    line-height: 25px;
   }
+ 
   .lastbtn button{
   border-radius: 10px;
   padding: .5rem;
@@ -706,12 +710,11 @@ body {
   height: max-content;
   font-size: 14px;
 }
+.linkedin img, .twitter img{
+  width: 20%;
 }
-@media (max-width: 390px) {
-  .list{
-    left: 12%;
-  }
 }
+
 
 @media (min-width: 760px) and (max-width: 1024px) {
   @keyframes ring {
