--- a/src/components/Homepage/homepage.css
+++ b/src/components/Homepage/homepage.css
@@ -553,8 +553,8 @@ margin-top: 3rem;
   }
   .imagehome{
     display: flex;
-    justify-content: end;
-    align-items: end;
+    justify-content: flex-end;
+    align-items: flex-end;
     height: 100%;
   }
 
